--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
 <!-- Temporary (?) testing -->
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4/css/tachyons.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-<!-- Temporary (?) testing -->
+  <link href="https://fonts.googleapis.com/css2?family=Sintony&display=swap" rel="stylesheet">
+  <!-- Temporary (?) testing -->
 </head>
 <body>
   <div id="root"></div>
