--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4/css/tachyons.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Sintony&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="https://www.airvisual.com/scripts/widget_v2.0.js"></script>
   <!-- Temporary (?) testing -->
 </head>
 <body>
